package despres2;

public interface CalculadoraStrategy {
    String calcularPreuVol(double preuVolSenseDesc);
}
