@startuml

title __PROBLEMAPATRONSABANSDESPRES's Class Diagram__\n

  namespace abans {
    class abans.CalculadoraPreuVol {
    }
  }
  

  namespace abans {
    class abans.Client {
    }
  }
  

  namespace comparator {
    class comparator.User {
    }
  }
  

  namespace comparator {
    class comparator.ordenarTest {
    }
  }
  

  namespace comparator {
    class comparator.perEdat {
    }
  }
  

  namespace comparator {
    class comparator.perNom {
    }
  }
  

  namespace despres1 {
    abstract class despres1.CalculadoraPreuVol {
    }
  }
  

  namespace despres1 {
    class despres1.Client1 {
    }
  }
  

  namespace despres1 {
    class despres1.VolIllesCalculator {
    }
  }
  

  namespace despres1 {
    class despres1.VolInternacionalCalculator {
    }
  }
  

  namespace despres1 {
    class despres1.VolNacionalCalculator {
    }
  }
  

  namespace despres2 {
    class despres2.Calculadora {
    }
  }
  

  namespace despres2 {
    interface despres2.CalculadoraStrategy {
    }
  }
  

  namespace despres2 {
    class despres2.Client2 {
    }
  }
  

  namespace despres2 {
    class despres2.VolIllesStrategy {
    }
  }
  

  namespace despres2 {
    class despres2.VolInternacionalStrategy {
    }
  }
  

  namespace despres2 {
    class despres2.VolNacionalStrategy {
    }
  }
  

  comparator.perEdat .up.|> java.util.Comparator
  comparator.perNom .up.|> java.util.Comparator
  despres1.VolIllesCalculator -up-|> despres1.CalculadoraPreuVol
  despres1.VolInternacionalCalculator -up-|> despres1.CalculadoraPreuVol
  despres1.VolNacionalCalculator -up-|> despres1.CalculadoraPreuVol
  despres2.Calculadora o-- despres2.CalculadoraStrategy : strategy
  despres2.VolIllesStrategy .up.|> despres2.CalculadoraStrategy
  despres2.VolInternacionalStrategy .up.|> despres2.CalculadoraStrategy
  despres2.VolNacionalStrategy .up.|> despres2.CalculadoraStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
